deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billing-sovereign
  labels:
    app.kubernetes.io/part-of: billing-pipeline
    app.kubernetes.io/managed-by: kustomize
