deploy/k8s/billing-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-api
  namespace: billing-sovereign
  labels:
    app: billing-api
spec:
  type: ClusterIP
  selector:
    app: billing-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
