deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  namespace: billing-sovereign
  labels:
    app.kubernetes.io/part-of: billing-pipeline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - billing.bhopti.com
        - api.interface.tag.ooo
      secretName: billing-tls
  rules:
    - host: billing.bhopti.com
      http:
        paths:
          - path: /webhooks/stripe
            pathType: Prefix
            backend:
              service:
                name: stripe-webhook
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billing-api
                port:
                  number: 8000
    - host: api.interface.tag.ooo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventops-grpc
                port:
                  number: 50051
